...
        fatalError("init(coder:) has not been implemented")
    }
    
    override func viewDidLoad() {
        tableView.register(UITableViewCell.self, forCellReuseIdentifier: "cell")
        
        let button = UIBarButtonItem(title: "Delete all", style: .done, target: self, action: #selector(deleteAll))
        navigationItem.rightBarButtonItem = button
    }
    
    override func tableView(_ tableView: UITableView, numberOfRowsInSection section: Int) -> Int {
        return stats.count
    }
...
        return cell
    }
    
    override func tableView(_ tableView: UITableView, trailingSwipeActionsConfigurationForRowAt indexPath: IndexPath) -> UISwipeActionsConfiguration? {
        
        let shapeType = stats[indexPath.row].type
        let deleteAction = UIContextualAction(style: .destructive, title: "Delete") {[weak self] (_, _, _) in
            self?.deleteShapeType?(shapeType)
        }
        
        return UISwipeActionsConfiguration(actions: [deleteAction])
    }
    
...
